Fix for other text field not showing and breakpoints hiding part of currency selector input

--- a/international_online_offer/sass/main.scss
+++ b/international_online_offer/sass/main.scss
@@ -5,8 +5,8 @@
 @import 'components/salary-rent.scss';
 @import 'components/csat.scss';
 
-@media (min-width: 769px) {
-    .spend-currency-column {
-        padding-right: 0px;
-    }
-}
+// @media (min-width: 769px) {
+//     .spend-currency-column {
+//         padding-right: 0px;
+//     }
+// }
